corrected ban function
